--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/next-js": "^2.4.2",
+    "@chakra-ui/react": "^2.10.6",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^1.7.17",
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.6.2",
     "formik": "^2.4.5",
-    "next": "14.0.3",
+    "framer-motion": "^12.4.7",
+    "next": "^14.2.24",
     "react": "^18",
     "react-dom": "^18",
     "swr": "^2.2.4",
